apps/incident-log-webapi/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: incident-log-webapi
spec:
  parentRefs:
    - name: incident-log-gateway
      namespace: wac-hospital
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /incident-log-api
      filters:
        - type: URLRewrite
          urlRewrite:
            path:
              type: ReplacePrefixMatch
              replacePrefixMatch: /api
      backendRefs:
        - group: ""
          kind: Service
          name: incident-log-webapi
          port: 80

    - matches:
        - path:
            type: PathPrefix
            value: /incident-log-openapi-ui
      backendRefs:
        - group: ""
          kind: Service
          name: incident-log-openapi-ui
          port: 80

    - matches:
        - path:
            type: Exact
            value: /incident-log-openapi
      filters:
        - type: URLRewrite
          urlRewrite:
            path:
              type: ReplaceFullPath
              replaceFullPath: /openapi
      backendRefs:
        - group: ""
          kind: Service
          name: incident-log-webapi
          port: 80
